fixed loadmore wrong size

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -245,7 +245,7 @@ body {
 
     .load-more-main {
         width: $btWidth;
-        height: 79%;
+        height: 81%;
         transform: translateY(($btWidth * .1)/2);
         background: linear-gradient(135deg, $primary 50%, $secondary)!important;
         transform-origin: center;
